# RoyalAfgPrevious

./: .gitignore  .snyk  Procfile  README.md  angular.json  app.js  docker-compose.yaml  karma.conf.js  package-lock.json  package.json  run.bat  runApp.bat  start.bat  tslint.json
.circleci/: config.yml
server/src/: BUILD.bazel  app.module.ts  main-controller.ts  main.ts
server/src/auth/: BUILD.bazel  auth.module.ts
server/src/auth/constants/: jwt.constants.ts
server/src/auth/controllers/: BUILD.bazel  auth.controller.ts  index.ts
server/src/auth/controllers/auth/: BUILD.bazel  auth.controller.ts
server/src/auth/dtos/: BUILD.bazel  login-dto.spec.ts  login-dto.ts  register-dto.spec.ts  register-dto.ts
server/src/auth/services/: BUILD.bazel  auth.service.ts
server/src/auth/services/auth/: BUILD.bazel  auth.service.spec.ts  auth.service.ts
server/src/auth/strategies/: BUILD.bazel  jwt-auth.guard.ts  jwt.strategy.ts  local-auth.guard.ts  local.strategy.ts
server/src/user/: BUILD.bazel  user.module.ts
server/src/user/controllers/: BUILD.bazel  my-account.controller.ts
server/src/user/controllers/my-account/: my-account.controller.ts
server/src/user/interfaces/: BUILD.bazel  user-doc.interface.ts  user.interface.ts  user.ts
server/src/user/models/: BUILD.bazel  user-schema.ts
server/src/user/services/: BUILD.bazel  user.service.ts
server/src/user/services/user/: BUILD.bazel  user.service.ts
server/src/wallet/: BUILD.bazel  wallet.module.ts
server/src/wallet/controllers/: BUILD.bazel  purchase.controller.ts
server/src/wallet/controllers/purchase/: purchase.controller.spec.ts  purchase.controller.ts
server/src/wallet/interfaces/: BUILD.bazel  wallet-doc.interface.ts  wallet.interface.ts
server/src/wallet/models/: BUILD.bazel  wallet-schema.ts
server/src/wallet/services/: BUILD.bazel  purchase.service.ts  wallet.service.ts
server/src/wallet/services/purchase/: purchase.service.ts
server/src/wallet/services/wallet/: wallet.service.spec.ts  wallet.service.ts
web/src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.theme.scss  app.component.ts  app.module.ts
web/src/app/Pages/UserPortal/: user-portal-routing.module.ts  user-portal.module.ts
web/src/app/Pages/UserPortal/login/: login.component.html  login.component.theme.scss  login.component.ts
web/src/app/Pages/UserPortal/user-portal/: user-portal.component.spec.ts  user-portal.component.ts
web/src/app/account/: BUILD.bazel  account-routing.module.ts  account.module.ts
web/src/app/account/components/register/: register.component.html  register.component.scss  register.component.ts
web/src/app/account/components/signIn/: signIn.component.html  signIn.component.scss  signIn.component.spec.ts  signIn.component.theme.scss  signIn.component.ts
web/src/app/account/dialogs/signout/: signout.dialog.component.html  signout.dialog.component.spec.ts  signout.dialog.component.ts
web/src/app/account/interfaces/: BUILD.bazel  user.interface.ts
web/src/app/account/models/: BUILD.bazel  register.dto.ts  signInDto.ts
web/src/app/account/services/: BUILD.bazel  auth.service.ts  user.service.ts
web/src/app/account/store/actions/: auth.action.ts  register-page.action.ts  signIn-page.action.ts  signOut.action.ts  user.action.ts
web/src/app/account/store/errors/: signIn-page.errors.ts
web/src/app/account/store/states/: auth-status.state.ts  auth.state.ts  register-page.state.ts  signIn-page.state.ts  signOut.state.ts  user.state.ts
web/src/app/account/validators/: BUILD.bazel  match.validator.ts
web/src/app/constants/: connection.constants.ts
web/src/app/core/: BUILD.bazel  core.module.ts  core.theme.scss
web/src/app/core/Dtos/: baseApi.dto.ts
web/src/app/core/components/account-menu/: account-menu.component.html  account-menu.component.scss  account-menu.component.ts
web/src/app/core/components/layout/: layout.component.html  layout.component.ts
web/src/app/core/components/nav-item/: nav-item.component.html  nav-item.component.ts  nav-item.theme.component.scss
web/src/app/core/components/sidenav/: sidenav.component.html  sidenav.component.scss  sidenav.component.ts
web/src/app/core/components/sidenav-filled/: sidenav-filled.component.html  sidenav-filled.component.spec.ts  sidenav-filled.component.ts
web/src/app/core/components/toolbar/: toolbar.component.html  toolbar.component.ts
web/src/app/core/components/toolbar-filled/: toolbar-filled.component.html  toolbar-filled.component.spec.ts  toolbar-filled.component.ts
web/src/app/core/containers/app/: app.component.html  app.component.scss  app.component.ts
web/src/app/core/services/: theme.service.ts
web/src/app/core/store/: index.ts
web/src/app/core/store/actions/: sidenav.action.ts  theme.action.ts
web/src/app/core/store/states/: app.state.ts  sidenav.state.ts
web/src/app/dialogs/signout/: signout.dialog.component.html  signout.dialog.component.ts
web/src/app/dtos/: login.dto.ts
web/src/app/games/: games-routing.module.ts  games.module.theme.scss  games.module.ts
web/src/app/games/components/select-grid-item/: select-grid-item.component.html  select-grid-item.component.scss  select-grid-item.component.spec.ts  select-grid-item.component.theme.scss  select-grid-item.component.ts
web/src/app/games/containers/play/: play.component.html  play.component.ts
web/src/app/interfaces/: user.ts
web/src/app/material/: material.module.ts
web/src/app/services/account/: user.service.ts
web/src/app/services/auth/: auth.service.ts  token.service.ts
web/src/app/shared/navbar/: navbar.component.html  navbar.component.scss  navbar.component.ts
web/src/app/static/: static.module.ts  static.routing.module.ts
web/src/app/store/actions/: auth.action.ts  user.actions.ts
web/src/app/store/effects/: auth.effects.ts  user.effect.ts
web/src/app/store/reducers/: app.reducers.ts  login-page.reducer.ts  user.reducer.ts
web/src/app/store/selectors/: user.selector.ts
web/src/app/store/state/: app.state.ts  login-page.state.ts  user.state.ts
web/src/app/store/states/: app.state.ts
(+133 files in other folders)
