package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library", "ts_devserver")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

ts_library(
    name = "app",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    deps = [
        "//src/user:usermodule",
        "//src/auth:authmodule",
        "//src/wallet:walletmodule",
        "@npm//@nestjs/core",
        "@npm//@nestjs/common",
        "@npm//@nestjs/mongoose",
        "@npm//@nestjs/config",
        "@npm//@nest-middlewares/cookie-parser",
        "@npm//@nestjs/serve-static",
        "@npm//cookie-parser",
        "@npm//@types/node",
    ],
)

ts_devserver(
    name = "devserver",
    deps = [
        ":app"
    ],
    entry_module = ":main",
    port = 3000,
)

nodejs_binary(
    name = "server",
    data = [
        ":app",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//minimist",
    ],
    entry_point = ":main",
)