package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "authmodule",
    srcs = glob(["*.ts"]),
    deps = [
        "//src/auth/dtos:dtos",
        "//src/auth/strategies:strategies",
        "//src/auth/services:services",
        "//src/auth/controllers:controllers",
        "//src/user:usermodule",
        "//src/wallet:walletmodule",
        "@npm//@nestjs/common",
        "@npm//@nestjs/config",
        "@npm//@nestjs/passport",
        "@npm//@nestjs/jwt",
    ],
)