package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "usermodule",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    deps = [
        "//src/user/controllers:controllers",
        "//src/user/models:models",
        "//src/user/services:services",
        "@npm//@nestjs/common",
        "@npm//@nestjs/mongoose",
    ],
)