package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "walletmodule",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    deps = [
        "//src/wallet/controllers:controllers",
        "//src/wallet/services:services",
        "//src/wallet/models:models",
        "@npm//@nestjs/common",
        "@npm//@nestjs/mongoose",
    ],
)