package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "strategies",
    srcs = glob(["*.ts"]),
    deps = [
        "//src/auth/dtos:dtos",
        "//src/user/interfaces:interfaces",
        "//src/user/services:services",
        "//src/auth/services:services",
        "@npm//@nestjs/common",
        "@npm//@nestjs/passport",
        "@npm//@nestjs/config",
        "@npm//passport-jwt",
        "@npm//passport-local",
        "@npm//rxjs",
    ],
)