package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "controllers",
        srcs = glob(
            include = ["*.ts"],
            exclude = ["*.spec.ts"],
        ),
    deps = [
        "//src/auth/strategies:strategies",
        "@npm//@nestjs/common",
    ],
)