package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "interfaces",
        srcs = glob(
            include = ["*.ts"],
            exclude = ["*.spec.ts"],
        ),
    deps = [
        "//src/user/interfaces:interfaces",
        "@npm//decimal.js",
        "@npm//mongoose",
    ],
)