package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "models",
        srcs = glob(
            include = ["*.ts"],
            exclude = ["*.spec.ts"],
        ),
    deps = [
        "//src/user/models:models",
        "@npm//@nestjs/common",
        "@npm//mongoose",
        "@npm//decimal.js",
        "@npm//@types/node",
    ],
)