package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "services",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.spec.ts"],    
    ),
    deps = [
        "//src/user/interfaces:interfaces",
        "//src/wallet/interfaces:interfaces",
        "//src/wallet/models:models",
        "@npm//@nestjs/common",
        "@npm//@nestjs/mongoose",
        "@npm//decimal.js",
        "@npm//@types/node",
        "@npm//mongoose",
        "@npm//@types/mongoose",
    ],
)