load("//tools:angular_ts_library.bzl", ng_ts_library)

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "app",
    srcs = glob(
        include = ["*.ts"],
    )
    tsconfig = "//src:tsconfig.json"
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router"
        "@npm//@angular/common"
        "@npm//@ngrx/store"
        "@npm//@ngrx/logger-plugin"
    ]
)