package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "authservice",
    srcs = glob(["*.ts"]),
    deps = [
        "//src/auth/dtos:dtos",
        "//src/user/interfaces:interfaces",
        "@npm//@nestjs/common",
        "@npm//@nestjs/jwt",
        "@npm//@nestjs/mongoose",
        "@npm//mongoose",
    ],
)