package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "userservice",
    srcs = glob(["*.ts"]),
    deps = [
        "//src/user/models:models",
        "//src/user/interfaces:interfaces",
        "@npm//@nestjs/common",
        "@npm//@nestjs/mongoose",
        "@npm//mongoose",
    ],
)